# Aether-Voice-OS

./: .coverage  .dockerignore  .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  .sccignore  00_START_HERE.md  AETHEROS_FINAL_SUMMARY.md  AETHER_INDEX.md  AGENTS.md  COMPLETION_CERTIFICATE.md  DEPLOYMENT_STATUS.md  DEVELOPER_REFERENCE.md  Dockerfile  FINAL_SUMMARY.md  FIREBASE_FIX_SUMMARY.md  FIREBASE_SETUP.md  GEMIGRAM_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.txt  INDEX.md  INTEGRATION_ARCHITECTURE.md  LICENSE  MASTER_INTEGRATION_EXAMPLE.tsx  PROJECT_COMPLETION_CERTIFICATE.txt  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  QUICK_START_VOICE.md  README.md  README_GEMIGRAM.md  REMOVE_CHATBOX_GUIDE.md  ROADMAP.md  SKILL.md  TROUBLESHOOTING.md  VOICE_DOCUMENTATION_INDEX.md  VOICE_FEATURES_SUMMARY.md  VOICE_FIRST_COMPLETION_REPORT.md  VOICE_FIRST_IMPLEMENTATION.md  (+55 more)
.firebase/: hosting.YXBwcy9wb3J0YWwvb3V0.cache  hosting.d2ViL291dA.cache
.git_stuck_backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.idx/: Skills.md  aether_v2_architecture.md  memories.md
aether-cortex/: pyproject.toml
aether-cortex/src/: axon.rs  lib.rs  synapse.rs
agents/: dependency_management_agent.py  di_injector.py  learning_agent.py  optimization_agent.py  security_agent.py  structure_analysis_agent.py
benchmark_reports/: gemini_benchmark_20260306_180303.json  (+8 more)
core/audio/cortex/: Cargo.toml  __init__.py
core/audio/cortex/src/: echo.rs  lib.rs  thalamus.rs
cortex/: Cargo.toml  README.md
cortex/src/: cochlea.rs  lib.rs  zcr.rs
(+948 files in other folders)
