[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aether-cortex"
version = "0.1.0"
description = "Neural Signal Layer for Aether Voice OS"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "aether_cortex"
