[package]
name = "aether-cortex"
version = "0.1.0"
edition = "2021"
description = "Neural Signal Layer for Aether Voice OS — biologically inspired audio DSP"
authors = ["AetherOS Team"]

[lib]
name = "aether_cortex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
