[package]
name = "aether-cortex"
version = "0.2.0"
edition = "2021"
description = "Consolidated Neural Signal Layer for Aether Voice OS"
authors = ["AetherOS Team"]

[lib]
name = "aether_cortex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
